--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load static %}
-
 {% block title %}Drug Issue Records{% endblock %}
-
 {% block content %}
 <div class="mx-1 py-2">
+    <span class="flex justify-center p-4 gap-4 text-xl">
+        <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
     <h1 class="text-lg font-bold text-amber-600 text-center uppercase">Drug Issue Record</h1>
+    </span>
     <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'create_record' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
                 <i class="fas fa-plus mr-2"></i> New Record
@@ -15,23 +16,22 @@
                 <i class="fas fa-file mr-2"></i> Generate Report
             </a>
     </div>
-
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
         <div class="overflow-x-auto max-h-[70vh]">
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-amber-400">
                     <tr>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">System Date Issued</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Physical Date Issued</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Date Issued</th>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Drug info</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Trade Name & <br> Supplier</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Trade Name</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Strength</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Remark</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">QTY</th>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Update</th>
                     </tr>
                 </thead>
@@ -40,15 +40,15 @@
                     <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-50 transition duration-150 ease-in-out text-center text-xs">
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.updated_at|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{r.date_issued}}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.issued_by|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.category|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}<br>{{ r.drug.strength|default_if_none:''|upper }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.trade_name|default_if_none:'N/A'|upper }} <br><small>{{ r.drug.supplier|default_if_none:'N/A'|upper }}</small></td>
+                        <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.trade_name|default_if_none:'N/A'|upper }} </td>
+                        <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.strength|default_if_none:''|upper }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.supplier|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.unit_issued_to|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.cost_price|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.quantity|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.remark|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500 text-center"><a href="{% url 'update_record' r.id %}"><i class="fa fa-solid fa-edit fa-lg text-amber-600"></i></a></td>
                     </tr>
                     {% endfor %}
