--- a/store/templates/store/worth.html
+++ b/store/templates/store/worth.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 uppercase ">
     <div class="bg-white bg-opacity-50  shadow-lg rounded-lg overflow-hidden">
-        <div class="bg-gradient-to-r from-emerald-500 to-emerald-700 px-6 py-4 border-b-2">
+        <div class="bg-gradient-to-r from-cyan-500 to-emerald-500 px-6 py-4 border-b-2">
             <h3 class="text-lg font-bold text-white uppercase tracking-wider text-center">
                 Live Inventory Worth
             </h3>
