--- a/store/templates/store/create_record.html
+++ b/store/templates/store/create_record.html
@@ -5,7 +5,10 @@
   <div class="max-w-7xl mx-auto">
     <div class="bg-amber-100 shadow-xl rounded-lg overflow-hidden">
       <div class="bg-amber-600 px-4 py-4">
+        <span class="flex justify-center p-1 gap-4 text-sm text-white">
+          <a href="{% url 'record' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
         <h2 class="text-sm font-bold text-white text-center uppercase">Issue Drugs to Units</h2>
+        </span>
       </div>
       {% if formset.non_form_errors %}
   <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative uppercase" role="alert">
@@ -62,16 +65,6 @@
                   <p class="text-red-600 text-xs mt-1">{{ form.quantity.errors.0 }}</p>
                 {% endif %}
               </div>
-              <div class="space-y-1">
-                <label class="block text-xs font-medium text-gray-700">Date</label>
-                <div class="mt-1">
-                  {{ form.date_issued }}
-                </div>
-                {% if form.date_issued.errors %}
-                  <p class="text-red-600 text-xs mt-1">{{ form.date_issued.errors.0 }}</p>
-                {% endif %}
-              </div>
-            </div>
           </div>
         {% endfor %}
         <div class="mt-3 flex justify-center">
