--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -2,10 +2,13 @@
 {% load humanize %}
 {% load static %}
 
-{% block title %}Drugs Inventory{% endblock %}
+{% block title %}Inventory{% endblock %}
 {% block content %}
 <div class="mx-1">
+  <span class="flex justify-center p-4 gap-4 text-xl">
+  <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
     <h1 class="text-lg font-bold text-cyan-800 text-center uppercase">Drug Inventory</h1>
+    </span>
     <div class="flex justify-center items-center m-2 space-x-2">
         <a href="{% url 'create_drug' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
           <i class="fas fa-plus mr-2"></i> Add Drug
@@ -13,39 +16,18 @@
         <a href="{% url 'drug_report' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
           <i class="fas fa-file mr-2"></i> Generate Report
         </a>
-        <!-- Filter Form -->
+        <!-- Search Form -->
         <form method="get" class="flex items-center space-x-2">
-          {% for field in drugsearchfilter.form %}
-            <div class="flex items-center">
-              <label for="{{ field.id_for_label }}" class="sr-only">{{ field.label }}</label>
-              {% if field.field.widget.input_type == 'select' %}
-                <select name="{{ field.name }}" id="{{ field.id_for_label }}"
-                  class="focus:ring-cyan-500 focus:border-cyan-500 block shadow-sm text-xs border-gray-300 rounded-md">
-                  {% for choice in field.field.choices %}
-                    <option value="{{ choice.0 }}" {% if choice.0 == field.value %}selected{% endif %}>
-                      {{ choice.1 }}
-                    </option>
-                  {% endfor %}
-                </select>
-              {% else %}
-                <input type="{{ field.field.widget.input_type }}"
-                  name="{{ field.name }}"
-                  id="{{ field.id_for_label }}"
-                  value="{{ field.value|default:'' }}"
-                  placeholder="{{ field.label }}"
-                  class="focus:ring-cyan-500 focus:border-cyan-500 block shadow-sm text-xs border-gray-300 rounded-md"
-                >
-              {% endif %}
-              {% if field.errors %}
-                <p class="ml-2 text-sm text-red-600">{{ field.errors.0 }}</p>
-              {% endif %}
-            </div>
-          {% endfor %}
+          <div class="flex items-center">
+            <label for="q" class="sr-only">Search</label>
+            <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search by name..."
+              class="focus:ring-cyan-500 focus:border-cyan-500 block shadow-sm text-xs border-gray-300 rounded-md">
+          </div>
           {% if request.GET.urlencode %}
           <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500">
             <i class="fas fa-rotate"></i>
-        </a>
-        {%endif%}
+          </a>
+          {%endif%}
           <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
             <i class="fas fa-search"></i>
           </button>
@@ -58,18 +40,16 @@
                     <tr class="text-xs text-center">
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Supply Date</th>
+                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Added by</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">strength</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Trade Name</th>
+                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">strength</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Dosage Form</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Pack Size</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Selling Price</th>
-                        <!-- <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Drugs Added</th> -->
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
-                        <!-- <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Value</th> -->
+                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Expiry Date</th>
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Update</th>
                     </tr>
@@ -78,19 +58,17 @@
                     {% for i in po %}
                     <tr class="{% cycle 'bg-white' 'bg-cyan-50' %} text-xs text-center">
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}<br> <small> added by: <br> {{ i.added_by|upper }}</small></td>
+                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap  text-gray-500"> {{ i.added_by|upper }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
                         <td class="p-3 whitespace-nowrap  font-medium text-gray-900">{{ i.generic_name|default_if_none:'N/A'|upper }}</td>
-                        <td class="p-3 whitespace-nowrap  font-medium text-gray-900">{{ i.strength|default_if_none:''|upper }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.trade_name|default_if_none:'N/A'|upper }}</td>
+                        <td class="p-3 whitespace-nowrap  font-medium text-gray-900">{{ i.strength|default_if_none:''|upper }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.supplier|default_if_none:'N/A'|upper }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.pack_size|default_if_none:'N/A'|upper }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-500">&#x20A6;{{ i.cost_price|default_if_none:'N/A' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-500">&#x20A6;{{ i.selling_price|default_if_none:'N/A' }}</td>
-                        <!-- <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td> -->
                         <td class="p-3 whitespace-nowrap  text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
-                        <!-- <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.total_value|default_if_none:'N/A' }}</td> -->
+                        <td class="p-3 whitespace-nowrap  text-gray-500">&#x20A6;{{ i.cost_price|default_if_none:'N/A' }}</td>
                         <td class="p-3 whitespace-nowrap ">
                             {% if i.expiration_date %}
                                 <span class="{% if i.expires_soon %}text-red-500{% else %}text-gray-500{% endif %}">
