3 levels of expiry date

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -127,14 +127,17 @@
 
     <footer class="bg-green-500 text-gray-700 py-2 mt-1">
         <div class="container mx-auto text-center">
-            <p class="text-xs">&copy; 2024 Pharmacy Inventory Management. Powered by <a class="text-xs uppercase rounded-md text-green-700 bg-white" href="#">Green Edge Technologies Nigeria</a> All rights reserved.
+            <p class="text-xs mb-1">
+                &copy; 2024 Pharmacy Inventory Management. Powered by
+                <a class="text-xs uppercase text-green-700 bg-white rounded-md px-1" href="#">Green Edge Technologies NG</a>.
+                All rights reserved.
             </p>
             <p class="text-xs">
-                Phone: 0806 662 6200, 0802 671 3714, Email: info@greenedgeng.com, Website: wwww.greenedgeng.com
+                Phone: 0806 662 6200, 0802 671 3714 &bull; Email: <a href="mailto:info@greenedgeng.com" class="text-green-700">info@greenedgeng.com</a> &bull; Website: <a href="http://www.greenedgeng.com" class="text-green-700" target="_blank" rel="noopener noreferrer">www.greenedgeng.com</a>
             </p>
         </div>
     </footer>
-
+    
     <script>
         document.getElementById('mobile-menu-button').addEventListener('click', function() {
             document.getElementById('mobile-menu').classList.toggle('hidden');
