--- a/store/templates/store/expiry_notification.html
+++ b/store/templates/store/expiry_notification.html
@@ -19,6 +19,10 @@
                     <span class="bg-blue-500 text-white text-xs font-bold rounded-full h-6 w-6 flex items-center justify-center">{{ total_expiring_in_3_months }}</span>
                     <span>&nbsp;Expiring within 3 months</span>
                 </div>
+                <div class="flex items-center">
+                    <span class="bg-blue-500 text-white text-xs font-bold rounded-full h-6 w-6 flex items-center justify-center">{{ total_expiring_in_1_month }}</span>
+                    <span>&nbsp;Expiring within 1 month</span>
+                </div>
             </div>
         </div>
         
@@ -46,16 +50,20 @@
                     <td class="p-3 whitespace-nowrap  text-gray-600">{{ drug.strength }}</td>
                     <td class="p-3 whitespace-nowrap  text-gray-600">{{ drug.expiration_date }}</td>
                     <td class="p-3 whitespace-nowrap">
-                        {% if drug.status == 'critical' %}
-                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-red-100 text-red-800">
+                        {% if drug.status == 'urgent' %}
+                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-rose-100 text-rose-700">
+                                <i class="fas fa-exclamation-triangle mr-2"></i>Expiring in less than 31 days
+                            </span>
+                        {% elif drug.status == 'critical' %}
+                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-yellow-100 text-yellow-500">
                                 <i class="fas fa-exclamation-triangle mr-2"></i>Expiring in less than 3 months
                             </span>
                         {% elif drug.status == 'expiring_soon' %}
-                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
+                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-500">
                                 <i class="fas fa-exclamation-circle mr-2"></i>Expiring in less than 6 months
                             </span>
                         {% else %}
-                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800">
+                            <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-green-100 text-green-500">
                                 <i class="fas fa-check-circle mr-2"></i>OK – Expiring in more than 6 months
                             </span>
                         {% endif %}
