--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -9,30 +9,31 @@
   <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
     <h1 class="text-lg font-bold text-cyan-800 text-center uppercase">Drug Inventory</h1>
     </span>
-    <div class="flex justify-center items-center m-2 space-x-2">
+    <div class="flex flex-wrap justify-center items-center m-2 space-x-2 gap-2">
         <a href="{% url 'create_drug' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
-          <i class="fas fa-plus mr-2"></i> Add Drug
+            <i class="fas fa-plus mr-2"></i> Add Drug
         </a>
         <a href="{% url 'drug_report' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
-          <i class="fas fa-file mr-2"></i> Generate Report
+            <i class="fas fa-file mr-2"></i> Generate Report
         </a>
         <!-- Search Form -->
-        <form method="get" class="flex items-center space-x-2">
-          <div class="flex items-center">
-            <label for="q" class="sr-only">Search</label>
-            <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search by name..."
-              class="focus:ring-cyan-500 focus:border-cyan-500 block shadow-sm text-xs border-gray-300 rounded-md">
-          </div>
-          {% if request.GET.urlencode %}
-          <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500">
-            <i class="fas fa-rotate"></i>
-          </a>
-          {%endif%}
-          <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
-            <i class="fas fa-search"></i>
-          </button>
+        <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 ">
+            <div class="flex items-center w-full sm:w-auto">
+                <label for="q" class="sr-only">Search</label>
+                <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search by name..."
+                    class="focus:ring-cyan-500 focus:border-cyan-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-48">
+            </div>
+            {% if request.GET.urlencode %}
+            <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500">
+                <i class="fas fa-rotate"></i>
+            </a>
+            {% endif %}
+            <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
+                <i class="fas fa-search"></i>
+            </button>
         </form>
-      </div>
+    </div>
+    
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
         <div class="overflow-x-auto max-h-[65vh]">
             <table class="min-w-full divide-y divide-gray-200">
@@ -69,19 +70,32 @@
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.pack_size|default_if_none:'N/A'|upper }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">&#x20A6;{{ i.cost_price|default_if_none:'N/A' }}</td>
-                        <td class="p-3 whitespace-nowrap ">
+                        <td class="p-3 whitespace-nowrap">
                             {% if i.expiration_date %}
-                                <span class="{% if i.expires_soon %}text-red-500{% else %}text-gray-500{% endif %}">
-                                    {{ i.expiration_date|date:'M-Y' }}
-                                    {% if i.expires_soon %}
-                                        <br><small class="text-red-600 font-semibold"> (Expires soon!)</small>
-                                    {% endif %}
-                                </span>
+                                {% if i.expiry_status == 'urgent' %}
+                                    <span class="text-red-600 font-semibold">
+                                        {{ i.expiration_date|date:'M-Y' }}
+                                        <br><small class="text-xs">(31 days!)</small>
+                                    </span>
+                                {% elif i.expiry_status == 'critical' %}
+                                    <span class="text-yellow-500 font-semibold">
+                                        {{ i.expiration_date|date:'M-Y' }}
+                                        <br><small class="text-xs">(3 months to expires)</small>
+                                    </span>
+                                {% elif i.expiry_status == 'expiring_soon' %}
+                                    <span class="text-blue-500">
+                                        {{ i.expiration_date|date:'M-Y' }}
+                                        <br><small class="text-xs">(6 months to expires)</small>
+                                    </span>
+                                {% else %}
+                                    <span class="text-gray-500">
+                                        {{ i.expiration_date|date:'M-Y' }}
+                                    </span>
+                                {% endif %}
                             {% else %}
                                 <span class="text-gray-500">N/A</span>
                             {% endif %}
-                        </td>
-                        <td class="p-3 whitespace-nowrap text-gray-500 text-center"><a href="{% url 'update_drug' i.id %}"><i class="fa fa-solid fa-edit fa-lg text-cyan-700"></i></a></td>
+                        </td>                        <td class="p-3 whitespace-nowrap text-gray-500 text-center"><a href="{% url 'update_drug' i.id %}"><i class="fa fa-solid fa-edit fa-lg text-cyan-700"></i></a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
